# test-commit-revert

./: .clang-format  CMakeLists.txt  LICENSE  README.md
cmake/: GoogleTest.cmake  GoogleTestDownload.cmake.in
src/: CMakeLists.txt
src/tcr/: CMakeLists.txt  fib.cpp  fib.hpp
tests/: CMakeLists.txt  tcr_test.cpp
tools/: commit.sh  compile.sh  configure.sh  pull-push.sh  revert.sh  tcr.sh  test.sh  watch.sh
